# ChangeLog for app-dicts/dictd-dicts
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-dicts/dictd-dicts/ChangeLog,v 1.11 2005/01/01 12:48:51 eradicator Exp $

  30 Jul 2004; Anders Rune Jensen <arj@gentoo.org> +metadata.xml, 
  QA - IUSE fix and {add missing,correct} metatata.xml.

  07 Jun 2004; Daniel Black <dragonheart@gentoo.org> +metadata.xml,
  dictd-dicts-1.0.ebuild:
  QA - IUSE fix

  09 Feb 2004; Dylan Carlson <absinthe@gentoo.org> dictd-dicts-1.0.ebuild:
  added amd64 keyword.

  19 Jan 2003; Olivier Reisch <doctomoe@gentoo.org> :
  Added ~ppc keyword

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
  05 Dec 2002; Dan Armak <danarmak@gentoo.org> ChangeLog  :

  Fix the deps to point to app-dicts instead of app-text.

*dictd-dicts-1.0 (1 Feb 2002)

  03 Dec 2002; Seemant Kulleen <seemant@gentoo.org> * :

  Moved to app-dicts

  20 Sept 2002; Mike Frysinger <vapier@gentoo.org> :
  Fixed DEOEND misspelling

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about
  writing correct changelogs are explained in the skel.ChangeLog file which you
  can find in the root directory of the portage repository.