@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-dicts/dictd-wn/dictd-wn-1.5-r1.ebuild,v 1.11 2005/01/01 12:50:35 eradicator Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-dicts/dictd-wn/dictd-wn-1.5-r1.ebuild,v 1.12 2005/02/27 12:01:49 nigoro Exp $
 
 MY_P=${P/td/t}-pre
 DESCRIPTION="WordNet for dict"
@@ -10,7 +10,7 @@ SRC_URI="ftp://ftp.dict.org/pub/dict/pre/${MY_P}.tar.gz"
 LICENSE="GPL-2"
 SLOT="0"
 IUSE=""
-KEYWORDS="x86 ppc sparc amd64"
+KEYWORDS="x86 ppc sparc amd64 ~ppc64"
 
 DEPEND=">=app-text/dictd-1.5.5"
 
