@@ -1,6 +1,9 @@
 # ChangeLog for app-dicts/dictd-dicts
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-dicts/dictd-dicts/ChangeLog,v 1.11 2005/01/01 12:48:51 eradicator Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-dicts/dictd-dicts/ChangeLog,v 1.12 2005/02/27 12:04:04 nigoro Exp $
+
+  27 Feb 2005; Yuta SATOH <nigoro@gentoo.org> dictd-dicts-1.0.ebuild:
+  added ~ppc64
 
   30 Jul 2004; Anders Rune Jensen <arj@gentoo.org> +metadata.xml, 
   QA - IUSE fix and {add missing,correct} metatata.xml.
